# car_car_final

./: .gitignore  README.md
Arduino_Peripherals/: Arduino_Peripherals.ino  modules.h
LED Matrix Control/: CMakeLists.txt  Makefile  README  README.md  database.cc  database.h  draw_tools.cc  draw_tools.h  led-control.cc  led-control.h  modules.cc  modules.h  test1.cc  test10_sound.cc  test11_combined.cc  test2.cc  test3.cc  test4.cc  test5_multithread.cc  test6_socket.cc  test7_led.cc  test8_combined.cc  test9_arduino_binding.cc  weather.cc  weather.h
LED Matrix Control/api_key/: api_key.txt
LED Matrix Control/datasheets/: calandar api .txt
LED Matrix Control/lib/: hardware-mapping.c
Python Flask Server/: main.py
Python Flask Server/templates/: index.html
SQLite Database/: README.md  change_data.py  create_db.py  database.db  location_name.csv  location_name.xls  location_name.xlsx  schema.sql
discord_bot/: main.py
discord_bot/ext/: database.py
